--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,8 @@
 astroid==2.2.5
 autopep8==1.4.3
+colorzero==1.1
+gpiozero==1.5.0
 grpcio==1.19.0
-grpcio-tools==1.19.0
 isort==4.3.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
