Added C sharp projects

--- a/csharp/GpioController/GpioController.csproj
+++ b/csharp/GpioController/GpioController.csproj
@@ -1,7 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.7.0" />
+    <PackageReference Include="Grpc" Version="1.19.0" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Tools" Version="1.19.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Protobuf Include="../../gpio.proto" Link="gpio.proto" GrpcServices="Client" />
+  </ItemGroup>
 </Project>
